feat: add deploy endpoints for Netlify Server
