# go/plumbing/operations/upload_deploy_server_parameters.go
@@ -1,0 +1,205 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"io"
+	"net/http"
+	"time"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	cr "github.com/go-openapi/runtime/client"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// NewUploadDeployServerParams creates a new UploadDeployServerParams object
+// with the default values initialized.
+func NewUploadDeployServerParams() *UploadDeployServerParams {
+	var ()
+	return &UploadDeployServerParams{
+
+		timeout: cr.DefaultTimeout,
+	}
+}
+
+// NewUploadDeployServerParamsWithTimeout creates a new UploadDeployServerParams object
+// with the default values initialized, and the ability to set a timeout on a request
+func NewUploadDeployServerParamsWithTimeout(timeout time.Duration) *UploadDeployServerParams {
+	var ()
+	return &UploadDeployServerParams{
+
+		timeout: timeout,
+	}
+}
+
+// NewUploadDeployServerParamsWithContext creates a new UploadDeployServerParams object
+// with the default values initialized, and the ability to set a context for a request
+func NewUploadDeployServerParamsWithContext(ctx context.Context) *UploadDeployServerParams {
+	var ()
+	return &UploadDeployServerParams{
+
+		Context: ctx,
+	}
+}
+
+// NewUploadDeployServerParamsWithHTTPClient creates a new UploadDeployServerParams object
+// with the default values initialized, and the ability to set a custom HTTPClient for a request
+func NewUploadDeployServerParamsWithHTTPClient(client *http.Client) *UploadDeployServerParams {
+	var ()
+	return &UploadDeployServerParams{
+		HTTPClient: client,
+	}
+}
+
+/*
+UploadDeployServerParams contains all the parameters to send to the API endpoint
+for the upload deploy server operation typically these are written to a http.Request
+*/
+type UploadDeployServerParams struct {
+
+	/*XNfRetryCount*/
+	XNfRetryCount *int64
+	/*DeployID*/
+	DeployID string
+	/*FileBody*/
+	FileBody io.ReadCloser
+	/*Size*/
+	Size *int64
+
+	timeout    time.Duration
+	Context    context.Context
+	HTTPClient *http.Client
+}
+
+// WithTimeout adds the timeout to the upload deploy server params
+func (o *UploadDeployServerParams) WithTimeout(timeout time.Duration) *UploadDeployServerParams {
+	o.SetTimeout(timeout)
+	return o
+}
+
+// SetTimeout adds the timeout to the upload deploy server params
+func (o *UploadDeployServerParams) SetTimeout(timeout time.Duration) {
+	o.timeout = timeout
+}
+
+// WithContext adds the context to the upload deploy server params
+func (o *UploadDeployServerParams) WithContext(ctx context.Context) *UploadDeployServerParams {
+	o.SetContext(ctx)
+	return o
+}
+
+// SetContext adds the context to the upload deploy server params
+func (o *UploadDeployServerParams) SetContext(ctx context.Context) {
+	o.Context = ctx
+}
+
+// WithHTTPClient adds the HTTPClient to the upload deploy server params
+func (o *UploadDeployServerParams) WithHTTPClient(client *http.Client) *UploadDeployServerParams {
+	o.SetHTTPClient(client)
+	return o
+}
+
+// SetHTTPClient adds the HTTPClient to the upload deploy server params
+func (o *UploadDeployServerParams) SetHTTPClient(client *http.Client) {
+	o.HTTPClient = client
+}
+
+// WithXNfRetryCount adds the xNfRetryCount to the upload deploy server params
+func (o *UploadDeployServerParams) WithXNfRetryCount(xNfRetryCount *int64) *UploadDeployServerParams {
+	o.SetXNfRetryCount(xNfRetryCount)
+	return o
+}
+
+// SetXNfRetryCount adds the xNfRetryCount to the upload deploy server params
+func (o *UploadDeployServerParams) SetXNfRetryCount(xNfRetryCount *int64) {
+	o.XNfRetryCount = xNfRetryCount
+}
+
+// WithDeployID adds the deployID to the upload deploy server params
+func (o *UploadDeployServerParams) WithDeployID(deployID string) *UploadDeployServerParams {
+	o.SetDeployID(deployID)
+	return o
+}
+
+// SetDeployID adds the deployId to the upload deploy server params
+func (o *UploadDeployServerParams) SetDeployID(deployID string) {
+	o.DeployID = deployID
+}
+
+// WithFileBody adds the fileBody to the upload deploy server params
+func (o *UploadDeployServerParams) WithFileBody(fileBody io.ReadCloser) *UploadDeployServerParams {
+	o.SetFileBody(fileBody)
+	return o
+}
+
+// SetFileBody adds the fileBody to the upload deploy server params
+func (o *UploadDeployServerParams) SetFileBody(fileBody io.ReadCloser) {
+	o.FileBody = fileBody
+}
+
+// WithSize adds the size to the upload deploy server params
+func (o *UploadDeployServerParams) WithSize(size *int64) *UploadDeployServerParams {
+	o.SetSize(size)
+	return o
+}
+
+// SetSize adds the size to the upload deploy server params
+func (o *UploadDeployServerParams) SetSize(size *int64) {
+	o.Size = size
+}
+
+// WriteToRequest writes these params to a swagger request
+func (o *UploadDeployServerParams) WriteToRequest(r runtime.ClientRequest, reg strfmt.Registry) error {
+
+	if err := r.SetTimeout(o.timeout); err != nil {
+		return err
+	}
+	var res []error
+
+	if o.XNfRetryCount != nil {
+
+		// header param X-Nf-Retry-Count
+		if err := r.SetHeaderParam("X-Nf-Retry-Count", swag.FormatInt64(*o.XNfRetryCount)); err != nil {
+			return err
+		}
+
+	}
+
+	// path param deploy_id
+	if err := r.SetPathParam("deploy_id", o.DeployID); err != nil {
+		return err
+	}
+
+	if o.FileBody != nil {
+		if err := r.SetBodyParam(o.FileBody); err != nil {
+			return err
+		}
+	}
+
+	if o.Size != nil {
+
+		// query param size
+		var qrSize int64
+		if o.Size != nil {
+			qrSize = *o.Size
+		}
+		qSize := swag.FormatInt64(qrSize)
+		if qSize != "" {
+			if err := r.SetQueryParam("size", qSize); err != nil {
+				return err
+			}
+		}
+
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
