# go/plumbing/operations/upload_deploy_server_responses.go
@@ -1,0 +1,107 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"fmt"
+	"io"
+
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/strfmt"
+
+	"github.com/netlify/open-api/v2/go/models"
+)
+
+// UploadDeployServerReader is a Reader for the UploadDeployServer structure.
+type UploadDeployServerReader struct {
+	formats strfmt.Registry
+}
+
+// ReadResponse reads a server response into the received o.
+func (o *UploadDeployServerReader) ReadResponse(response runtime.ClientResponse, consumer runtime.Consumer) (interface{}, error) {
+	switch response.Code() {
+	case 200:
+		result := NewUploadDeployServerOK()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return result, nil
+	default:
+		result := NewUploadDeployServerDefault(response.Code())
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		if response.Code()/100 == 2 {
+			return result, nil
+		}
+		return nil, result
+	}
+}
+
+// NewUploadDeployServerOK creates a UploadDeployServerOK with default headers values
+func NewUploadDeployServerOK() *UploadDeployServerOK {
+	return &UploadDeployServerOK{}
+}
+
+/*
+UploadDeployServerOK handles this case with default header values.
+
+OK
+*/
+type UploadDeployServerOK struct {
+}
+
+func (o *UploadDeployServerOK) Error() string {
+	return fmt.Sprintf("[PUT /deploys/{deploy_id}/server][%d] uploadDeployServerOK ", 200)
+}
+
+func (o *UploadDeployServerOK) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	return nil
+}
+
+// NewUploadDeployServerDefault creates a UploadDeployServerDefault with default headers values
+func NewUploadDeployServerDefault(code int) *UploadDeployServerDefault {
+	return &UploadDeployServerDefault{
+		_statusCode: code,
+	}
+}
+
+/*
+UploadDeployServerDefault handles this case with default header values.
+
+error
+*/
+type UploadDeployServerDefault struct {
+	_statusCode int
+
+	Payload *models.Error
+}
+
+// Code gets the status code for the upload deploy server default response
+func (o *UploadDeployServerDefault) Code() int {
+	return o._statusCode
+}
+
+func (o *UploadDeployServerDefault) Error() string {
+	return fmt.Sprintf("[PUT /deploys/{deploy_id}/server][%d] uploadDeployServer default  %+v", o._statusCode, o.Payload)
+}
+
+func (o *UploadDeployServerDefault) GetPayload() *models.Error {
+	return o.Payload
+}
+
+func (o *UploadDeployServerDefault) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	o.Payload = new(models.Error)
+
+	// response payload
+	if err := consumer.Consume(response.Body(), o.Payload); err != nil && err != io.EOF {
+		return err
+	}
+
+	return nil
+}
